--- a/FSS/scss/app.scss
+++ b/FSS/scss/app.scss
@@ -44,11 +44,13 @@
 @import "settings/settings-37-simple-nav";
 @import "settings/settings-38-modules";
 @import "settings/settings-39-icotiles";
+@import "settings/settings-40-identity";
 // styles
 @import "scss-common/foundation"; 
 @import "main-bar";
 @import "uniwebglobaluser";
 @import "components-edited";
+@import "identity";
 @import "scss-common/modules";
 @import "scss-common/simple-modules";
 @import "scss-common/icotiles"
