--- a/FSS/scss/settings/_settings-19-orbit.scss
+++ b/FSS/scss/settings/_settings-19-orbit.scss
@@ -5,21 +5,21 @@
 
 // We use these to control the caption styles
 // $orbit-container-bg: none;
- $orbit-caption-bg: $white;
- $orbit-caption-font-color: $gray-dark-color;
+// $orbit-caption-bg: rgba(51,51,51, .8);
+// $orbit-caption-font-color: $white;
 // $orbit-caption-font-size: rem-calc(14);
- $orbit-caption-position: "under"; // Supported values: "bottom", "under"
+// $orbit-caption-position: "bottom"; // Supported values: "bottom", "under"
 // $orbit-caption-padding: rem-calc(10 14);
 // $orbit-caption-height: auto;
 
 // We use these to control the left/right nav styles
 // $orbit-nav-bg: transparent;
- $orbit-nav-bg-hover: transparent;
- $orbit-nav-arrow-color: $gray-color;
- $orbit-nav-arrow-color-hover: $gray-color;
+// $orbit-nav-bg-hover: rgba(0,0,0,0.3);
+// $orbit-nav-arrow-color: $white;
+// $orbit-nav-arrow-color-hover: $white;
 
 // We use these to control the timer styles
- $orbit-timer-bg: rgba(255,255,255,0);
+// $orbit-timer-bg: rgba(255,255,255,0.3);
  $orbit-timer-show-progress-bar: false;
 
 // We use these to control the bullet nav styles
@@ -29,14 +29,14 @@
 
 // We use these to controls the style of slide numbers
 // $orbit-slide-number-bg: rgba(0,0,0,0);
- $orbit-slide-number-font-color: transparent;
+// $orbit-slide-number-font-color: $white;
 // $orbit-slide-number-padding: rem-calc(5);
+
+// Graceful Loading Wrapper and preloader
+// $wrapper-class: "slideshow-wrapper";
+// $preloader-class: "preloader";
 
 // Hide controls on small
 // $orbit-nav-hide-for-small: true;
 // $orbit-bullet-hide-for-small: true;
 // $orbit-timer-hide-for-small: true;
-
-// Graceful Loading Wrapper and preloader
-// $wrapper-class: "slideshow-wrapper";
-// $preloader-class: "preloader";
