--- a/FSS/scss/settings/_settings-38-modules.scss
+++ b/FSS/scss/settings/_settings-38-modules.scss
@@ -3,11 +3,11 @@
 
 // Barva pro tmavou variantu modulu
 // $module-dark-color: $black; 
-// Barva pro světlou variantu modulu
+// Barva pro svetlou variantu modulu
 // $module-inverse-color: $white; 
-// Barva textu tmavého modulu - světlá
+// Barva textu tmaveho modulu - svetla
 // $module-dark-text-color: $module-inverse-color; 
-// Inverzní barva textu světlého modulu
+// Inverzní barva textu svetleho modulu
 // $module-inverse-text-color: $module-dark-color; 
 
 // $module-radius: $global-radius;
@@ -20,7 +20,7 @@
 // $module-dark-background-factor: 0.5;
 // $module-dark-header-factor: 0.8;
 
-// Text na světlém pozadí s přechodem bottom je špatně čitelný, factor zmírňuje průhlednost a vylepšuje čitelnost
+// Text na světlém pozadí s prechodem bottom je spatne citelny, factor zmirnuje pruhlednost a vylepsuje citelnost
 // $module-inverse-background-factor-hover-correction: 1.5;
 // $module-inverse-background-factor: 0.5;
 // $module-inverse-header-factor: 0.8;
