--- a/FSS/scss/_identity.scss
+++ b/FSS/scss/_identity.scss
@@ -2,29 +2,29 @@
 
 $fac-tag-bg-color: $white;
 $fac-tag-bg-image: "../images/znak-mu-green.svg";
-$fac-tag-width: rem-calc(65);
-$fac-tag-height: rem-calc(146);
+$fac-tag-width: rem-calc(52);
+$fac-tag-height: rem-calc(130);
 
-$fac-tag-text-height: rem-calc(50);
-$fac-tag-text-image: "../images/fss-text-white.svg";
+$fac-tag-gutter: rem-calc(20);
+$fac-tag-text-height: rem-calc(43);
 
 .mu-tag {
-  padding-left: ( $fac-tag-width + rem-calc(19) );
+  padding-left: ( $fac-tag-width + $fac-tag-gutter );
 }
 
 .identity-row {
   min-height: rem-calc(135);
 
   @media #{$medium-up} {
-    min-height: rem-calc(165);
+    min-height: rem-calc(135);
   }
 }
 
 @mixin fac-tag-base($bg, $bg-img) {
-  background: $bg url($bg-img) no-repeat center 48px;
-  background-size: 43px 52px;
+  background: $bg url($bg-img) no-repeat center 73px;
+  background-size: 34px 42px;
   display: block;
-  height: $fac-tag-height - $height-above-header-bar;
+  height: $fac-tag-height;// - $height-above-header-bar;
   left: 0;
   margin-left: $column-gutter / 2;
   position: absolute;
@@ -33,24 +33,25 @@ $fac-tag-text-image: "../images/fss-text-white.svg";
   z-index: 7000;
 
   @media #{$medium-up} {
-    background-position: center 76px;
-    height: $fac-tag-height;
     top: -$height-above-header-bar;
-    width: $fac-tag-width;
   }
 }    
 
 @mixin fac-tag-text {
-  background: transparent url($fac-tag-text-image) no-repeat left top;
-  background-size: contain;
-  left: ( rem-calc(84) + ( $column-gutter / 2 ) );
+  background: transparent;
+  left: ( $fac-tag-width + $fac-tag-gutter + ( $column-gutter / 2 ) );
   position: absolute;
-  top: rem-calc(42);
+  top: rem-calc(68);
   height: $fac-tag-text-height;
-  width: rem-calc(200);
+  width: rem-calc(250);
 
   @media #{$medium-up} {
-    top: rem-calc(48);
+    top: rem-calc(44);
+  }
+
+  img {
+    height: $fac-tag-text-height !important;
+    width: auto !important;
   }
 }
 
