--- a/FSS/scss/settings/_settings-40-identity.scss
+++ b/FSS/scss/settings/_settings-40-identity.scss
@@ -3,8 +3,8 @@
 
 // $fac-tag-bg-color: $white;
 // $fac-tag-bg-image: "../images/znak-mu-green.svg";
-// $fac-tag-width: rem-calc(65);
-// $fac-tag-height: rem-calc(146);
+// $fac-tag-width: rem-calc(52);
+// $fac-tag-height: rem-calc(130);
 
-// $fac-tag-text-height: rem-calc(50);
-// $fac-tag-text-image: "../images/fss-text-white.svg";
+// $fac-tag-gutter: rem-calc(20);
+// $fac-tag-text-height: rem-calc(43);
